--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,15 @@ p {
   color: #8f8f8f;
 }
 
+button{
+  background-color: white;
+}
+
 /* Headings */
 
 .big-heading {
   font-family: 'Roboto', sans-serif;
-  font-size: 3.5rem;
+  font-size: 3rem;
   line-height: 1.5;
   font-weight: 900;
 }
@@ -51,7 +55,7 @@ p {
 
 .navbar-brand {
   font-family: 'Roboto', sans-serif;
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: bold;
 }
 
@@ -226,5 +230,6 @@ p {
   .title-image {
     position: static;
     transform: rotate(0);
+    width: 90%;
   }
 }
