--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -85,7 +85,7 @@ body {
   }
 
   @include respond(phone) {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
   /*
@@ -106,7 +106,8 @@ body {
   }
 
   @include respond(phone) {
-    font-size: 3rem;
+    font-size: 2rem;
+    margin: 8px;
   }
 }
 
